@@ -1,9 +1,9 @@
 AUX timezone-data-2008h-makefile.patch 4037 RMD160 b7b9926ccee050dd18f2c33f2654a0b6dc4d35e0 SHA1 281539ae7f6fd804fc1e7ec9533552fa7fd50d88 SHA256 fc496b869ed6b70c60b0fcdea0a176e31c9405c96e6bf73b5edc26339de66c39
-DIST tzcode2009t.tar.gz 191325 RMD160 6071d69d9367211cfe2ea32c9467f7317bb511d2 SHA1 2bc3abe70dd8b83582c22edaa86bf066c5508a36 SHA256 97f64d7056d6c18e6b4e1619bf94fc625a3d08413d238e0c5a5faba714a2297f
 DIST tzcode2010j.tar.gz 191844 RMD160 604a0d9c8f30175f282c637d189591394c71431a SHA1 feac73315eb2ff82ff942590fcaea9224cc635c4 SHA256 f32b46405190e3a5f1ee4db9fb50aaf1379e6af4e5493402ebfc8ee757058e97
-DIST tzdata2010b.tar.gz 187080 RMD160 b466357f47e1fb002d1586b3bf1b41a30e2512b1 SHA1 c456b990d9a3c3874d17197b5c8b5ee57def0463 SHA256 a93208ae389cc0d3618731cc9f406ba2cfc6aac39668a06c687d3fae2a7e8210
+DIST tzcode2010k.tar.gz 192047 RMD160 fd211701531f8b3ffa2383047279fc0d9d7da9e1 SHA1 57ecc7173fff554a5ab73a4b4546e557a1599783 SHA256 96671eac3a98d0c974833c8bfa7ea9b537cc9d32573e902103846b90f6dccdbd
 DIST tzdata2010j.tar.gz 189870 RMD160 35c63055336aac4561c857fd6d388e57a0178157 SHA1 94b49ba5029cb9d9ac1d15c2812943823261832a SHA256 dcf2101d0c5bb20a7f182866ea3e52b54c8f4d129c025a96c9a31377676f554b
-EBUILD timezone-data-2010b.ebuild 3167 RMD160 11b13acfe983fc55c34e561bd663f7fbceac59c6 SHA1 8a2be7a36a92bf2f7f30a5a430be939394f32d71 SHA256 efa9cfb7eb44a0780d9718f6bf6ba1d310fe8dc473455ff9173b4fd8d3e460e8
-EBUILD timezone-data-2010j.ebuild 3160 RMD160 2e5c30d43a7e665e99b4e082883907e410484d91 SHA1 730984b6fabd733ce8ebaa85f3ef2322a177ec59 SHA256 9429770cb6d92b8a252214ea3c55a316a23c0ec08f76763eeda130fc146c8d55
-MISC ChangeLog 29954 RMD160 f5f1e4fe69bfdf836ebe8bdd2bf79a1b26d205fe SHA1 401f974083bba81709807c3458211fb642a5c019 SHA256 1e4308f19ba18db4bdb6020272b71827e46de12d61280f3d54a8ed3227ad9e0e
+DIST tzdata2010k.tar.gz 191382 RMD160 b7a4ccc4c71d587111364914dbea131c90f566ad SHA1 46d26a7709860aaef3a7dfdab7e05c94ce9ad233 SHA256 ef69c99504c0fd9864ba8ef1daae5f2d4df097cf7dc350f09b8f70386272408d
+EBUILD timezone-data-2010j.ebuild 3160 RMD160 f601a8b6840349598bd31225c2288088d2f4b53e SHA1 59010610186dca9691865c0328e85719a3f0f09d SHA256 d33ad907eea8a50b434523c1a3a1649558cc51f0bd680c996195be1216d4b83e
+EBUILD timezone-data-2010k.ebuild 3160 RMD160 601f1b7d18ce4c1bb4107b05faf9d0b39dfc8c9d SHA1 166bd03c3369b9cdcc63e4424428acc7c9c9beab SHA256 126b180b094d0c554920aef9ea84ac488e46d5bbf1bf3b5daefecd175bfb3659
+MISC ChangeLog 30219 RMD160 a6b57bb972da1573733a59068b743d5ba186d953 SHA1 41365c81580d49d3b14f365d82bf3cde03c8f814 SHA256 ff36e2f91e8151175f02e864da7256a19e000255ffe946df9ca5bd3c802fb1c1
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
