@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/timezone-data-2010j.ebuild,v 1.1 2010/05/10 19:18:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/timezone-data-2010j.ebuild,v 1.2 2010/07/26 22:11:12 vapier Exp $
 
 inherit eutils toolchain-funcs flag-o-matic
 
