@@ -1,6 +1,15 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.233 2010/05/10 19:18:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.235 2010/07/26 22:12:06 vapier Exp $
+
+*timezone-data-2010k (26 Jul 2010)
+
+  26 Jul 2010; Mike Frysinger <vapier@gentoo.org>
+  +timezone-data-2010k.ebuild:
+  Version bump #329917 by Rodrigo Severo.
+
+  26 Jul 2010; Mike Frysinger <vapier@gentoo.org> timezone-data-2010j.ebuild:
+  Stabilize for everyone.
 
 *timezone-data-2010j (10 May 2010)
 
